--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,12 @@ runtime: python39
 
 entrypoint: gunicorn -b :$PORT main:app
 
+automatic_scaling:
+  min_instances: 1
+  max_instances: 10
+  target_cpu_utilization: 0.65
+  target_throughput_utilization: 0.75
+
 handlers:
   - url: /.*
     script: auto
