Adding debugging steps to workflow file

--- a/.github/workflows/gae_deploy.yaml
+++ b/.github/workflows/gae_deploy.yaml
@@ -4,13 +4,14 @@ on:
   push:
     paths:
       - 'tdf-bart.py'
+      - 'gae_deploy.yaml'
     branches:
       - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -19,17 +20,21 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
-    - name: Deploy to Google App Engine
-      env:
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+
+    - name: Set up Google Cloud credentials
       run: |
-        echo "$GOOGLE_APPLICATION_CREDENTIALS" > /tmp/credentials.json
+        echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}" > /tmp/credentials.json
+
+    - name: Authenticate with Google Cloud
+      run: |
         gcloud auth activate-service-account --key-file=/tmp/credentials.json
         gcloud config set project ${{ secrets.GOOGLE_PROJECT_ID }}
+
+    - name: Deploy to Google App Engine
+      run: |
         gcloud app deploy --quiet
