--- a/.github/workflows/gae_deploy.yaml
+++ b/.github/workflows/gae_deploy.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,11 +18,17 @@ jobs:
       with:
         python-version: '3.9'
 
+  Install_dependency:
+
+    steps:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        
+  Deploy:
 
+    steps:
     - name: Set up Google Cloud credentials
       run: |
         echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}" > /tmp/credentials.json
