--- a/.github/workflows/gae_deploy.yaml
+++ b/.github/workflows/gae_deploy.yaml
@@ -19,15 +19,15 @@ jobs:
         python-version: '3.9'
 
   Install_dependency:
-
+    runs-on: ubuntu-latest
     steps:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
-  Deploy:
 
+  Deploy:
+    runs-on: ubuntu-latest
     steps:
     - name: Set up Google Cloud credentials
       run: |
