--- a/.github/workflows/gae_deploy.yaml
+++ b/.github/workflows/gae_deploy.yaml
@@ -18,25 +18,28 @@ jobs:
       with:
         python-version: '3.9'
 
-  Install_dependency:
+  install-dependencies:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-  Deploy:
+  deploy:
     runs-on: ubuntu-latest
+    needs: install-dependencies
     steps:
-    - name: Set up Google Cloud credentials
-      run: |
-        echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}" > /tmp/credentials.json
+    - name: Authenticate to GCP
+      uses: google-github-actions/auth@v0.7.0
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-    - name: Authenticate with Google Cloud
-      run: |
-        gcloud auth activate-service-account --key-file=/tmp/credentials.json
-        gcloud config set project ${{ secrets.GOOGLE_PROJECT_ID }}
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v0.7.0
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
 
     - name: Deploy to Google App Engine
       run: |
