--- a/.github/workflows/gae_deploy.yaml
+++ b/.github/workflows/gae_deploy.yaml
@@ -29,12 +29,12 @@ jobs:
     - name: Authenticate to GCP
       uses: google-github-actions/auth@v0.7.0
       with:
-        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.7.0
       with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        project_id: ${{ secrets.GOOGLE_PROJECT_ID }}
 
     - name: Deploy to Google App Engine
       run: |
