--- a/.github/workflows/gae_deploy.yaml
+++ b/.github/workflows/gae_deploy.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  install-dependencies:
+  deploy-gcp:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -24,8 +24,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: install-dependencies
+    needs: deploy-gcp
     steps:
+
     - name: Authenticate to GCP
       uses: google-github-actions/auth@v0.7.0
       with:
@@ -36,10 +37,13 @@ jobs:
       with:
         project_id: ${{ secrets.GOOGLE_PROJECT_ID }}
 
+    - name: Checkout code
+      uses: actions/checkout@v3
+
     - name: Showing the files present
       run: |
         ls -la
-        
+
     - name: Deploy to Google App Engine
       run: |
         gcloud app deploy
