--- a/.github/workflows/gae_deploy.yaml
+++ b/.github/workflows/gae_deploy.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy-gcp:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -16,34 +17,25 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
- 
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: deploy-gcp
-    steps:
-
     - name: Authenticate to GCP
-      uses: google-github-actions/auth@v0.7.0
+      uses: google-github-actions/auth@v2.1.3
       with:
         credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
     - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.7.0
+      uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.GOOGLE_PROJECT_ID }}
+        export_default_credentials: true
 
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Showing the files present
-      run: |
-        ls -la
+    - name: Showing the files present (for debugging)
+      run: ls -la
 
     - name: Deploy to Google App Engine
-      run: |
-        gcloud app deploy --quiet
+      run: gcloud app deploy --quiet
