--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 
 runtime: python39
-instance_class: F2  # Instance class (can range from F1 to F4, and B1 to B8 for basic scaling)
+instance_class: F4_1G  # Instance class (can range from F1 to F4, and B1 to B8 for basic scaling)
 automatic_scaling:
   min_instances: 1
   max_instances: 4
